--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,17 @@
     "@types/multer": "^1.4.9",
     "@types/multiparty": "^0.0.35",
     "aws-sdk": "^2.1480.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "micro": "^10.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "nodemon": "^3.0.1",
+    "stripe": "^14.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
