--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "stripe": "^14.11.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
