--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon src/index.ts",
     "build": "tsc",
@@ -33,6 +34,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
