--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/index.ts", "src/routes/webhook.ts"],
   "exclude": ["node_modules"]
 }
